Change project structure

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>angular.keycloak</groupId>
     <artifactId>api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>dev</version>
     <name>api</name>
     <description>api</description>
     <url/>
@@ -70,12 +70,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-docker-compose</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
