Add spring actuator

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.url=${MYSQL_URL}
 spring.liquibase.user=root
 spring.liquibase.password=${MYSQL_ROOT_PASSWORD}
+
+management.endpoints.web.exposure.include=*
